WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13037
REGRESSION: Copy-on-scroll not reset properly after back/forward navigation
https://bugs.webkit.org/show_bug.cgi?id=13037
Summary
REGRESSION: Copy-on-scroll not reset properly after back/forward navigation
mitz
Reported
2007-03-10 14:41:48 PST
Summary: After navigating back and forth through the b/f cache, the web view is set to "copy on scroll" despite having content that should prohibit such behavior (e.g. fixed background). To reproduce: 1) Go to <
http://www.w3.org/TR/CSS21/
>. 2) Click on the "next" link. 3) Go back. 4) Go forward. 5) Scroll up and down. Expected result: The "W3 Working Draft" banner on the left to remain fixed and not scroll out of view. Actual result: The "W3 Working Draft" banner scrolls out of view when scrolling down, and artifacts appear when scrolling up. Regression: Yes, this doesn't happen in shipping Safari. Notes: While this is a rendering bug, it's ultimately caused by the page loading machinery not (re)setting up the view properly, so I'm filing under Page Loading.
Attachments
Keep the slow repaint object count intact and non-negative
(4.11 KB, patch)
2007-05-08 11:02 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2007-03-13 16:22:55 PDT
<
rdar://problem/5061030
>
mitz
Comment 2
2007-05-08 08:24:00 PDT
Regressed in <
http://trac.webkit.org/projects/webkit/changeset/13440
>.
mitz
Comment 3
2007-05-08 08:53:49 PDT
Actually the regression in
r13440
was fixed in
r13649
(fix for
bug 8079
). It came back later.
mitz
Comment 4
2007-05-08 09:05:48 PDT
Most recently regressed in <
http://trac.webkit.org/projects/webkit/changeset/15722
> (fix for
bug 10179
).
mitz
Comment 5
2007-05-08 11:02:11 PDT
Created
attachment 14415
[details]
Keep the slow repaint object count intact and non-negative
Dave Hyatt
Comment 6
2007-05-08 23:50:12 PDT
Comment on
attachment 14415
[details]
Keep the slow repaint object count intact and non-negative r=me
Mark Rowe (bdash)
Comment 7
2007-05-09 01:14:39 PDT
Landed in
r21329
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug