WebCore/page/FrameView.cpp
@@ -54,7 +54,8 @@ struct ScheduledEvent {
 class FrameViewPrivate {
 public:
     FrameViewPrivate(FrameView* view)
-        : layoutTimer(view, &FrameView::layoutTimerFired)
+        : m_slowRepaintObjectCount(0)
+        , layoutTimer(view, &FrameView::layoutTimerFired)
         , m_mediaType("screen")
         , m_enqueueEvents(0)
         , m_overflowStatusDirty(true)
@@ -69,7 +70,6 @@ public:
     void reset()
     {
         useSlowRepaints = false;
-        slowRepaintObjectCount = 0;
         borderX = 30;
         borderY = 30;
         layoutTimer.stop();
@@ -87,7 +87,7 @@ public:
     ScrollbarMode vmode;
     ScrollbarMode hmode;
     bool useSlowRepaints;
-    unsigned slowRepaintObjectCount;
+    unsigned m_slowRepaintObjectCount;
 
     int borderX, borderY;
 
@@ -549,7 +549,7 @@ String FrameView::mediaType() const
 
 bool FrameView::useSlowRepaints() const
 {
-    return d->useSlowRepaints || d->slowRepaintObjectCount > 0;
+    return d->useSlowRepaints || d->m_slowRepaintObjectCount > 0;
 }
 
 void FrameView::setUseSlowRepaints()
@@ -560,15 +560,16 @@ void FrameView::setUseSlowRepaints()
 
 void FrameView::addSlowRepaintObject()
 {
-    if (d->slowRepaintObjectCount == 0)
+    if (!d->m_slowRepaintObjectCount)
         setStaticBackground(true);
-    d->slowRepaintObjectCount++;
+    d->m_slowRepaintObjectCount++;
 }
 
 void FrameView::removeSlowRepaintObject()
 {
-    d->slowRepaintObjectCount--;
-    if (d->slowRepaintObjectCount == 0)
+    ASSERT(d->m_slowRepaintObjectCount > 0);
+    d->m_slowRepaintObjectCount--;
+    if (!d->m_slowRepaintObjectCount)
         setStaticBackground(d->useSlowRepaints);
 }
 
